# swordgameserver

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  justfile  recipe.json
.sqlx/: query-57e1affa89e29d2888723f1bef83a7b7075db96fff4c8f02e8ee11252d1e85d5.json
scripts/: db.sql
src/: main.rs
