[package]
name = "swordgameserver"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros"
] }
tokio = { version = "1", features = ["full"] }
